Bound search function to button

--- a/client/src/app/components/search/search.component.html
+++ b/client/src/app/components/search/search.component.html
@@ -7,6 +7,6 @@
 	<!--populate body and text value https://www.w3schools.com/tags/att_option_selected.asp-->
 </select>
 <!--TODO: Call search function when the button is clicked-->
-<button class="btn btn-light">Search</button>
+<button class="btn btn-light"(click) = "search()">Search</button>
 <!--TODO: Display a carousel component if searching for an artist or album. Bind carousel's resources and give it a static carouselId.-->
 <!--TODO: Display a track-list component if searching for a track. Bind track-list's tracks.-->
