Fixed select binding

--- a/client/src/app/components/search/search.component.html
+++ b/client/src/app/components/search/search.component.html
@@ -2,7 +2,7 @@
 <!--TODO: bind input's model to searchString-->
 <input [(ngModel)]="searchString">
 <!--TODO: bind select's model to searchCategory-->
-<select>
+<select [(ngModel)] = "searchCategory">
 	<!--TODO: loop over searchCategories to create dropdown options-->
 	<!--populate body and text value https://www.w3schools.com/tags/att_option_selected.asp-->
 	<option *ngFor="let category of searchCategories" [value] = "category">{{category}}</option>
