--- a/client/src/app/components/carousel-card/carousel-card.component.html
+++ b/client/src/app/components/carousel-card/carousel-card.component.html
@@ -1,5 +1,5 @@
 <!--TODO: bind href to the appropriate local URL for the album/artist/song.-->
-<a>
+<a [href] = resource.url>
 <!--TODO bind src with the album/artist/song image URRL-->
 <img class="d-block w-100" [src] = resource.imageURL>
 <div class="carousel-caption d-none d-md-block">
