--- a/client/src/app/components/search/search.component.html
+++ b/client/src/app/components/search/search.component.html
@@ -13,4 +13,11 @@
 <!--TODO: Call search function when the button is clicked-->
 <button class="btn btn-light"(click) = "search()">Search</button>
 <!--TODO: Display a carousel component if searching for an artist or album. Bind carousel's resources and give it a static carouselId.-->
+{{searchCategory}}
+<div *ngIf="searchCategory != 'track'">
+	<app-carousel></app-carousel>
+</div>
 <!--TODO: Display a track-list component if searching for a track. Bind track-list's tracks.-->
+<div *ngIf="searchCategory == 'track'">
+	<app-track-list></app-track-list>
+</div>
