--- a/client/src/app/pages/album-page/album-page.component.html
+++ b/client/src/app/pages/album-page/album-page.component.html
@@ -1,9 +1,9 @@
 <div *ngIf="album" class="row">
 	<div class="col-6">
 		<!--TODO: populate with album name-->
-		<h1>???</h1>
+		<h1>{{album.name}}</h1>
 		<!--TODO: set src to album image URL-->
-		<img id="albumImg">
+		<img id="albumImg" [src] = "album.imageURL">
 		<!--TODO: loop over album artists-->
 		<p>
 			<!--TODO: link to artist page, display artist name-->
@@ -11,7 +11,7 @@
 		</p>
 		<p>
 			<!--TODO: link to album page on spotify, display album name-->
-			<a class="btn btn-light" role="button" target="_blank" >Open ??? on Spotify</a>
+			<a class="btn btn-light" role="button" target="_blank" [href]="album.url" >Open {{album.name}} on Spotify</a>
 		</p>
 	</div>
 	<div class="col-6">
