--- a/client/src/app/pages/artist-page/artist-page.component.html
+++ b/client/src/app/pages/artist-page/artist-page.component.html
@@ -1,26 +1,26 @@
 <div *ngIf="artist" class="row">
 	<div class="col-6">
 		<!--TODO: populate with artist name-->
-		<h1></h1>
+		<h1>{{artist.name}}</h1>
 		<!--TODO: populate with artist image URL-->
-		<img id="artistImg" src="../../../assets/unknown.jpg">
+		<img id="artistImg" [src]="artist.imageURL">
 		<p>
 			<!--TODO: link to artist page on spotify, display artist name-->
-			<a class="btn btn-light" role="button" target="_blank">Open ??? on Spotify</a>
+			<a class="btn btn-light" role="button" target="_blank" [href]="artist.url">Open {{artist.name}} on Spotify</a>
 		</p>
 	</div>
 	<div class="col-2">
 		<h3>Genres</h3>
 		<ul>
 			<!--TODO: loop over artist's genres and display them-->
-			<li>???</li>
+			<li *ngFor="let genre of artist.genres">{{genre}}</li>
 		</ul>
 		<p>
 		</p>
 	</div>
 	<div class="col-4">
 		<!--TODO: display artist name-->
-		<h3>???'s Top Tracks</h3>
+		<h3>{{artist.name}}'s Top Tracks</h3>
 		<!--TODO: display the artist's top tracks-->
 	</div>
 </div>
@@ -28,7 +28,7 @@
 <div *ngIf="artist" class="row">
 	<div class="col-6">
 		<!--TODO: display artist name-->
-		<h3>???'s Albums</h3>
+		<h3>{{artist.name}}'s Albums</h3>
 		<!--TODO: Display a carousel component for the artist's albums. Bind carousel's resources and give it a static carouselId.-->
 	</div>
 	<div class="col-6">
