--- a/client/src/app/pages/track-page/track-page.component.html
+++ b/client/src/app/pages/track-page/track-page.component.html
@@ -1,10 +1,10 @@
 <div class="row">
 	<div *ngIf="track" class="col-6">
 		<!--TODO: populate with track name-->
-		<h1>???</h1>
+		<h1>{{track.name}}</h1>
 		<p>
 			<!--TODO: link to album page, display album name-->
-			Track on <a>???</a>
+			Track on <a>{{track.album.name}}</a>
 		</p>
 		<div>
 			<!--TODO: loop over track's artists-->
@@ -15,7 +15,7 @@
 		</div>
 		<p>
 			<!--TODO: populate with track duration-->
-			Duration: ???
+			Duration: {{track.duration_ms}}
 		</p>
 		<p>
 			<!--TODO: link to track page on spotify, display track name-->
