--- a/client/src/app/components/track-list/track-list.component.html
+++ b/client/src/app/components/track-list/track-list.component.html
@@ -10,21 +10,21 @@
 			<th scope="col">Album</th>
 		</tr>
 	</thead>
-	<tbody>
+	<tbody *ngFor="let track of tracks">
 		<!--TODO: Use *ngFor to loop over tracks-->
 		<tr>
 			<!--TODO: Populate with row index (start with 1!)-->
 			<td>???</td>
 			<td>
 				<!--TODO: link to the endpoint for that track, display the track's name-->
-				<a>???</a>
+				<a [href] = "track.url">{{track.name}}</a>
 			</td>
 			<!--TODO: display the track's duration-->
-			<td>???</td>
+			<td>{{track.duration_ms}}</td>
 			<!--TODO: Use *ngIf to hide if hideArtist is true; link to the first artist's endpoint and display the first artist's name-->
-			<td><a></a></td>
+			<td *ngIf="hideArtist == false"><a [href] = "track.artist[0].url">{{track.artist[0].name}}</a></td>
 			<!--TODO: Use *ngIf to hide if hideAlbum is true; link to the album's endpoint and display the album's name-->
-			<td><a></a></td>
+			<td *ngIf="hideArtist == false"><a [href] = "track.album.url">{{track.album.name}}</a></td>
 		</tr>
 	</tbody>
 </table>
