--- a/client/src/app/pages/album-page/album-page.component.html
+++ b/client/src/app/pages/album-page/album-page.component.html
@@ -5,9 +5,9 @@
 		<!--TODO: set src to album image URL-->
 		<img id="albumImg" [src] = "album.imageURL">
 		<!--TODO: loop over album artists-->
-		<p>
+		<p *ngFor="let artist of album.artists">
 			<!--TODO: link to artist page, display artist name-->
-			Artist: <a>???</a>
+			Artist: <a [href]="artist.url">{{artist.name}}</a>
 		</p>
 		<p>
 			<!--TODO: link to album page on spotify, display album name-->
