Linked track and looped over track's artists

--- a/client/src/app/pages/track-page/track-page.component.html
+++ b/client/src/app/pages/track-page/track-page.component.html
@@ -4,13 +4,13 @@
 		<h1>{{track.name}}</h1>
 		<p>
 			<!--TODO: link to album page, display album name-->
-			Track on <a>{{track.album.name}}</a>
+			Track on <a href = "/album/{{track.album.id}}">{{track.album.name}}</a>
 		</p>
 		<div>
 			<!--TODO: loop over track's artists-->
-			<p>
+			<p *ngFor="let artist of track.artists">
 				<!--TODO: link to artist page, display artist name-->
-				Artist: <a>???</a>
+				Artist: <a href="/artist/{{artist.id}}">{{artist.name}}</a>
 			</p>
 		</div>
 		<p>
@@ -19,7 +19,7 @@
 		</p>
 		<p>
 			<!--TODO: link to track page on spotify, display track name-->
-			<a class="btn btn-light" role="button" target="_blank">Open ??? on Spotify</a>
+			<a class="btn btn-light" role="button" target="_blank" [href]="track.url">Open {{track.name}} on Spotify</a>
 		</p>
 	</div>
 	<div *ngIf="audioFeatures" class="col-6">
