Fixed track duration

--- a/client/src/app/pages/track-page/track-page.component.html
+++ b/client/src/app/pages/track-page/track-page.component.html
@@ -15,7 +15,7 @@
 		</div>
 		<p>
 			<!--TODO: populate with track duration-->
-			Duration: {{track.duration_ms}}
+			Duration: {{track.durationStr}}
 		</p>
 		<p>
 			<!--TODO: link to track page on spotify, display track name-->
