--- a/client/src/app/components/track-list/track-list.component.html
+++ b/client/src/app/components/track-list/track-list.component.html
@@ -22,9 +22,9 @@
 			<!--TODO: display the track's duration-->
 			<td>{{track.durationStr}}</td>
 			<!--TODO: Use *ngIf to hide if hideArtist is true; link to the first artist's endpoint and display the first artist's name-->
-			<td *ngIf="hideArtist == false"><a href = "/artist/{{artistId}}">{{track.artist[0].name}}</a></td>
+			<td *ngIf="hideArtist === false"><a href = "/artist/{{artistId}}">{{track.artist[0].name}}</a></td>
 			<!--TODO: Use *ngIf to hide if hideAlbum is true; link to the album's endpoint and display the album's name-->
-			<td *ngIf="hideArtist == false"><a href = "/album/{{albumId}}">{{track.album.name}}</a></td>
+			<td *ngIf="hideArtist === false"><a href = "/album/{{albumId}}">{{track.album.name}}</a></td>
 		</tr>
 	</tbody>
 </table>
