--- a/client/src/app/pages/album-page/album-page.component.html
+++ b/client/src/app/pages/album-page/album-page.component.html
@@ -17,5 +17,6 @@
 	<div class="col-6">
 		<h3>Album Tracks</h3>
 		<!--TODO: display the track list for the album. Hide the artist and album columns because they are redundant on this page.-->
+		<app-track-list [tracks] = "tracks" hideArtist = "true" hideAlbum = "true"></app-track-list>
 	</div>
 </div>
