--- a/client/src/app/pages/artist-page/artist-page.component.html
+++ b/client/src/app/pages/artist-page/artist-page.component.html
@@ -22,6 +22,7 @@
 		<!--TODO: display artist name-->
 		<h3>{{artist.name}}'s Top Tracks</h3>
 		<!--TODO: display the artist's top tracks-->
+		<app-track-list [tracks] = "topTracks" hideArtist = "false" hideAlbum = "false"></app-track-list>
 	</div>
 </div>
 
@@ -30,10 +31,12 @@
 		<!--TODO: display artist name-->
 		<h3>{{artist.name}}'s Albums</h3>
 		<!--TODO: Display a carousel component for the artist's albums. Bind carousel's resources and give it a static carouselId.-->
+		<app-carousel carouselId="artistAlbumCarousel" [resources]="albums"></app-carousel>
 	</div>
 	<div class="col-6">
 		<h3>Similar Artists</h3>
 		<!--TODO: Display a carousel component for similar artists. Bind carousel's resources and give it a static carouselId.-->
+		<app-carousel carouselId="similarArtistsCarousel" [resources]="relatedArtists"></app-carousel>
 	</div>
 
 </div>
