--- a/client/src/app/components/search/search.component.html
+++ b/client/src/app/components/search/search.component.html
@@ -1,6 +1,6 @@
 <h1>Search Spotify</h1>
 <!--TODO: bind input's model to searchString-->
-<input [(ngModel)]="searchString">
+<input [(ngModel)]="searchString" (keyup.enter) =  "search()">
 <!--TODO: bind select's model to searchCategory-->
 <select [(ngModel)] = "searchCategory">
 	<!--TODO: loop over searchCategories to create dropdown options-->
