--- a/client/src/app/components/track-list/track-list.component.html
+++ b/client/src/app/components/track-list/track-list.component.html
@@ -5,9 +5,9 @@
 			<th scope="col">Track</th>
 			<th scope="col">Duration</th>
 			<!--TODO: Use *ngIf to hide if hideArtist is true-->
-			<th *ngIf="hideArtist == false" scope="col">Primary Artist</th>
+			<th *ngIf="hideArtist===false" scope="col">Primary Artist</th>
 			<!--TODO: Use *ngIf to hide if hideAlbum is true-->
-			<th *ngIf="hideArtist == false" scope="col">Album</th>
+			<th *ngIf="hideArtist===false" scope="col">Album</th>
 		</tr>
 	</thead>
 	<tbody *ngFor="let track of tracks; index as i">
@@ -17,14 +17,14 @@
 			<td>{{i+1}}</td>
 			<td>
 				<!--TODO: link to the endpoint for that track, display the track's name-->
-				<a href = "/track/{{trackId}}">{{track.name}}</a>
+				<a href = "/track/{{track.id}}">{{track.name}}</a>
 			</td>
 			<!--TODO: display the track's duration-->
 			<td>{{track.durationStr}}</td>
 			<!--TODO: Use *ngIf to hide if hideArtist is true; link to the first artist's endpoint and display the first artist's name-->
-			<td *ngIf="hideArtist === false"><a href = "/artist/{{artistId}}">{{track.artist[0].name}}</a></td>
+			<td *ngIf="hideArtist===false"><a href = "/artist/{{track.artists[0].id}}">{{track.artists[0].name}}</a></td>
 			<!--TODO: Use *ngIf to hide if hideAlbum is true; link to the album's endpoint and display the album's name-->
-			<td *ngIf="hideArtist === false"><a href = "/album/{{albumId}}">{{track.album.name}}</a></td>
+			<td *ngIf="hideArtist===false"><a href = "/album/{{track.album.id}}">{{track.album.name}}</a></td>
 		</tr>
 	</tbody>
 </table>
