--- a/client/src/app/pages/album-page/album-page.component.html
+++ b/client/src/app/pages/album-page/album-page.component.html
@@ -7,7 +7,7 @@
 		<!--TODO: loop over album artists-->
 		<p *ngFor="let artist of album.artists">
 			<!--TODO: link to artist page, display artist name-->
-			Artist: <a href='/artist/{{artist.id}}'>{{artist.name}}</a>
+			Artist: <a href='/artist/{{artist.id}}' class="link">{{artist.name}}</a>
 		</p>
 		<p>
 			<!--TODO: link to album page on spotify, display album name-->
