--- a/client/src/app/pages/album-page/album-page.component.html
+++ b/client/src/app/pages/album-page/album-page.component.html
@@ -1,22 +1,24 @@
-<div *ngIf="album" class="row">
-	<div class="col-6">
-		<!--TODO: populate with album name-->
-		<h1>{{album.name}}</h1>
-		<!--TODO: set src to album image URL-->
-		<img id="albumImg" [src] = "album.imageURL">
-		<!--TODO: loop over album artists-->
-		<p *ngFor="let artist of album.artists">
-			<!--TODO: link to artist page, display artist name-->
-			Artist: <a href='/artist/{{artist.id}}' class="link">{{artist.name}}</a>
-		</p>
-		<p>
-			<!--TODO: link to album page on spotify, display album name-->
-			<a class="btn btn-light" role="button" target="_blank" [href]="album.url" >Open {{album.name}} on Spotify</a>
-		</p>
+<html class = "background">
+	<div *ngIf="album" class="row">
+		<div class="col-6">
+			<!--TODO: populate with album name-->
+			<h1>{{album.name}}</h1>
+			<!--TODO: set src to album image URL-->
+			<img id="albumImg" [src] = "album.imageURL">
+			<!--TODO: loop over album artists-->
+			<p *ngFor="let artist of album.artists">
+				<!--TODO: link to artist page, display artist name-->
+				Artist: <a href='/artist/{{artist.id}}' class="link">{{artist.name}}</a>
+			</p>
+			<p>
+				<!--TODO: link to album page on spotify, display album name-->
+				<a class="btn btn-light" role="button" target="_blank" [href]="album.url" >Open {{album.name}} on Spotify</a>
+			</p>
+		</div>
+		<div class="col-6">
+			<h3>Album Tracks</h3>
+			<!--TODO: display the track list for the album. Hide the artist and album columns because they are redundant on this page.-->
+			<app-track-list [tracks] = "tracks" hideArtist = "true" hideAlbum = "true"></app-track-list>
+		</div>
 	</div>
-	<div class="col-6">
-		<h3>Album Tracks</h3>
-		<!--TODO: display the track list for the album. Hide the artist and album columns because they are redundant on this page.-->
-		<app-track-list [tracks] = "tracks" hideArtist = "true" hideAlbum = "true"></app-track-list>
-	</div>
-</div>
+</html>
