--- a/client/src/app/pages/home-page/home-page.component.html
+++ b/client/src/app/pages/home-page/home-page.component.html
@@ -1,4 +1,6 @@
-<div class="row">
-	<app-about class="col-6"></app-about>
-	<app-search class="col-6"></app-search>
-</div>
+<html class="background">
+	<div class="row">
+		<app-about class="col-6"></app-about>
+		<app-search class="col-6"></app-search>
+	</div>
+</html>
