Changed link colors

--- a/client/src/app/components/track-list/track-list.component.html
+++ b/client/src/app/components/track-list/track-list.component.html
@@ -17,14 +17,14 @@
 			<td>{{i+1}}</td>
 			<td>
 				<!--TODO: link to the endpoint for that track, display the track's name-->
-				<a href = "/track/{{track.id}}">{{track.name}}</a>
+				<a href = "/track/{{track.id}}" class="link">{{track.name}}</a>
 			</td>
 			<!--TODO: display the track's duration-->
 			<td>{{track.durationStr}}</td>
 			<!--TODO: Use *ngIf to hide if hideArtist is true; link to the first artist's endpoint and display the first artist's name-->
-			<td *ngIf="hideArtist===false"><a href = "/artist/{{track.artists[0].id}}">{{track.artists[0].name}}</a></td>
+			<td *ngIf="hideArtist===false"><a href = "/artist/{{track.artists[0].id}}" class="link">{{track.artists[0].name}}</a></td>
 			<!--TODO: Use *ngIf to hide if hideAlbum is true; link to the album's endpoint and display the album's name-->
-			<td *ngIf="hideArtist===false"><a href = "/album/{{track.album.id}}">{{track.album.name}}</a></td>
+			<td *ngIf="hideArtist===false"><a href = "/album/{{track.album.id}}" class="link">{{track.album.name}}</a></td>
 		</tr>
 	</tbody>
 </table>
