Changed the text color for carousel card

--- a/client/src/app/components/carousel-card/carousel-card.component.html
+++ b/client/src/app/components/carousel-card/carousel-card.component.html
@@ -4,6 +4,6 @@
 <img class="d-block w-100" [src] = resource.imageURL>
 <div class="carousel-caption d-none d-md-block">
 	<!--TODO: populate h5 with the album/artist/song name-->
-	<h5>{{resource.name}}</h5>
+	<h5 class ="text">{{resource.name}}</h5>
 </div>
 </a>
