Added gestures for search

--- a/client/src/app/components/search/search.component.html
+++ b/client/src/app/components/search/search.component.html
@@ -1,4 +1,8 @@
 <h1>Search Spotify</h1>
+<div>
+	<app-handtracker (onPrediction)="prediction($event)"></app-handtracker>
+	<div [innerHTML]="gesture" style="color: antiquewhite;"></div>
+</div>
 <!--TODO: bind input's model to searchString-->
 <input [(ngModel)]="searchString" (keyup.enter) =  "search()">
 <!--TODO: bind select's model to searchCategory-->
