Moved handtracker out of this component

--- a/client/src/app/pages/home-page/home-page.component.html
+++ b/client/src/app/pages/home-page/home-page.component.html
@@ -1,13 +1,10 @@
-<div>
+<!-- <div>
 	<app-handtracker (onPrediction)="prediction($event)"></app-handtracker>
 	<div [innerHTML]="gesture"></div>
-</div>
+</div> -->
 <div class="background">
-	
 	<div class="row">
 		<app-about class="col-6"></app-about>
-		<!-- <app-handtracker class="col-6" (onPrediction)="prediction($event)"></app-handtracker>
-		<div [innerHTML]="gesture"></div> -->
-		<app-search class="col-6" [gesture]="gesture"></app-search>
+		<app-search class="col-6"></app-search>
 	</div>
 </div>
