--- a/client/src/app/components/about/about.component.html
+++ b/client/src/app/components/about/about.component.html
@@ -4,6 +4,7 @@
 	<div class="row">
 		<div class="col-3"><app-handtracker (onPrediction)="prediction($event)"></app-handtracker></div>
 		<div class="col" style="color:antiquewhite">
+			<h5><strong>Gestures</strong></h5>
 			<p>
 				Two Open Hands: Open Profile on Spotify
 				<br>
