--- a/client/src/app/pages/album-page/album-page.component.html
+++ b/client/src/app/pages/album-page/album-page.component.html
@@ -4,7 +4,7 @@
 </div> -->
 
 <div class = "background">
-	<div>
+	<!-- <div>
 		<br>
 		<div class="row">
 			<div class="col-3"><app-handtracker (onPrediction)="prediction($event)"></app-handtracker></div>
@@ -26,7 +26,7 @@
 			</div>
 		</div>
 		<div [innerHTML]="gesture" style="color: antiquewhite;"></div>
-	</div>
+	</div> -->
 	<div *ngIf="album" class="row">
 		<div class="col-6">
 			<!--TODO: populate with album name-->
@@ -47,6 +47,29 @@
 			<h3>Album Tracks</h3>
 			<!--TODO: display the track list for the album. Hide the artist and album columns because they are redundant on this page.-->
 			<app-track-list [tracks] = "tracks" hideArtist = "true" hideAlbum = "true"></app-track-list>
+			<div>
+				<br>
+				<div class="row">
+					<div class="col-3"><app-handtracker (onPrediction)="prediction($event)"></app-handtracker></div>
+					<div class="col" style="color:antiquewhite">
+						<h5><strong>Gestures</strong></h5>
+						<p>
+							Two Open Hands: Open Page on Spotify
+							<br>
+							Two Closed Hands: Return to Home Page
+							<br>
+							Open Hand: Open Artist Page
+							<br>
+							One Open Hand and One Closed Hand: Open Track Page
+							<br>
+							Hand Pointing: Select Artist
+							<br>
+							Two Hands Pointing: Select Track
+						</p>
+					</div>
+				</div>
+				<div [innerHTML]="gesture" style="color: antiquewhite;"></div>
+			</div>
 		</div>
 	</div>
 </div>
