--- a/client/src/app/pages/artist-page/artist-page.component.html
+++ b/client/src/app/pages/artist-page/artist-page.component.html
@@ -4,7 +4,7 @@
 </div> -->
 
 <div class = "background">
-	<div>
+	<!-- <div>
 		<br>
 		<div class="row">
 			<div class="col-3"><app-handtracker (onPrediction)="prediction($event)"></app-handtracker></div>
@@ -22,7 +22,7 @@
 			</div>
 		</div>
 		<div [innerHTML]="gesture" style="color: antiquewhite;"></div>
-	</div>
+	</div> -->
 	<div *ngIf="artist" class="row">
 		<div class="col-6">
 			<!--TODO: populate with artist name-->
@@ -48,6 +48,25 @@
 			<h3>{{artist.name}}'s Top Tracks</h3>
 			<!--TODO: display the artist's top tracks-->
 			<app-track-list [tracks] = "topTracks" hideArtist = "false" hideAlbum = "false"></app-track-list>
+			<div>
+				<br>
+				<div class="row">
+					<div class="col"><app-handtracker (onPrediction)="prediction($event)"></app-handtracker></div>
+					<div class="col" style="color:antiquewhite">
+						<h5><strong>Gestures</strong></h5>
+						<p>
+							Two Open Hands: Open Page on Spotify
+							<br>
+							Two Closed Hands: Return to Home Page
+							<br>
+							One Open Hand and One Closed Hand: Open Track Page
+							<br>
+							Two Hands Pointing: Select Track
+						</p>
+					</div>
+				</div>
+				<div [innerHTML]="gesture" style="color: antiquewhite;"></div>
+			</div>
 		</div>
 	</div>
 
