--- a/client/src/app/pages/artist-page/artist-page.component.html
+++ b/client/src/app/pages/artist-page/artist-page.component.html
@@ -75,12 +75,12 @@
 			<!--TODO: display artist name-->
 			<h3>{{artist.name}}'s Albums</h3>
 			<!--TODO: Display a carousel component for the artist's albums. Bind carousel's resources and give it a static carouselId.-->
-			<app-carousel carouselId="artistAlbumCarousel" [resources]="albums"></app-carousel>
+			<app-carousel carouselId="artistAlbumCarousel" [resources]="albums" cardId="artistAlbumCard"></app-carousel>
 		</div>
 		<div class="col-6">
 			<h3>Similar Artists</h3>
 			<!--TODO: Display a carousel component for similar artists. Bind carousel's resources and give it a static carouselId.-->
-			<app-carousel carouselId="similarArtistsCarousel" [resources]="relatedArtists"></app-carousel>
+			<app-carousel carouselId="similarArtistsCarousel" [resources]="relatedArtists" cardId="similarArtistCard"></app-carousel>
 		</div>
 
 	</div>
