Added Selected Artist/Selected Track

--- a/client/src/app/pages/album-page/album-page.component.html
+++ b/client/src/app/pages/album-page/album-page.component.html
@@ -1,32 +1,6 @@
-<!-- <div>
-	<app-handtracker (onPrediction)="prediction($event)"></app-handtracker>
-	<div [innerHTML]="gesture"></div>
-</div> -->
+
 
 <div class = "background">
-	<!-- <div>
-		<br>
-		<div class="row">
-			<div class="col-3"><app-handtracker (onPrediction)="prediction($event)"></app-handtracker></div>
-			<div class="col" style="color:antiquewhite">
-				<h5><strong>Gestures</strong></h5>
-				<p>
-					Two Open Hands: Open Page on Spotify
-					<br>
-					Two Closed Hands: Return to Home Page
-					<br>
-					Open Hand: Open Artist Page
-					<br>
-					One Open Hand and One Closed Hand: Open Track Page
-					<br>
-					Hand Pointing: Select Artist
-					<br>
-					Two Hands Pointing: Select Track
-				</p>
-			</div>
-		</div>
-		<div [innerHTML]="gesture" style="color: antiquewhite;"></div>
-	</div> -->
 	<div *ngIf="album" class="row">
 		<div class="col-6">
 			<!--TODO: populate with album name-->
@@ -66,6 +40,9 @@
 							<br>
 							Two Hands Pointing: Select Track
 						</p>
+						<strong>Selected Artist:</strong> {{album.artists[i].name}}
+						<br>
+						<strong>Selected Track:</strong> {{tracks[k].name}}
 					</div>
 				</div>
 				<div [innerHTML]="gesture" style="color: antiquewhite;"></div>
