Delete some stuff

--- a/client/src/app/components/about/about.component.html
+++ b/client/src/app/components/about/about.component.html
@@ -1,8 +1,7 @@
 <div>
-	<!-- <div>Two Open Hands</div> -->
 	<br>
 	<div class="row">
-		<div class="col-3"><app-handtracker (onPrediction)="prediction($event)"></app-handtracker></div>
+		<div class="col"><app-handtracker (onPrediction)="prediction($event)"></app-handtracker></div>
 		<div class="col" style="color:antiquewhite">
 			<h5><strong>Gestures</strong></h5>
 			<p>
