--- a/client/src/app/components/carousel-card/carousel-card.component.html
+++ b/client/src/app/components/carousel-card/carousel-card.component.html
@@ -1,6 +1,6 @@
-<!-- <div id="{{cardId}}"> -->
+
 	<!--TODO: bind href to the appropriate local URL for the album/artist/song.-->
-	<a id="{{cardId}}" href = "/{{resource.category}}/{{resource.id}}">
+	<a href = "/{{resource.category}}/{{resource.id}}">
 	<!--TODO bind src with the album/artist/song image URRL-->
 	<img class="d-block w-100" [src] = resource.imageURL>
 	<div class="carousel-caption d-none d-md-block">
@@ -8,4 +8,3 @@
 		<h5 class ="text">{{resource.name}}</h5>
 	</div>
 	</a>
-<!-- </div> -->
