--- a/client/src/app/pages/home-page/home-page.component.html
+++ b/client/src/app/pages/home-page/home-page.component.html
@@ -1,10 +1,7 @@
-<!-- <div>
-	<app-handtracker (onPrediction)="prediction($event)"></app-handtracker>
-	<div [innerHTML]="gesture"></div>
-</div> -->
-<div class="background">
+
+<html class="background">
 	<div class="row">
 		<app-about class="col-6"></app-about>
 		<app-search class="col-6"></app-search>
 	</div>
-</div>
+</html>
