--- a/client/src/app/components/search/search.component.html
+++ b/client/src/app/components/search/search.component.html
@@ -2,18 +2,37 @@
 <div>
 	<br>
 	<div class="row">
-		<div class="col-3"><app-handtracker (onPrediction)="prediction($event)"></app-handtracker></div>
+		<div class="col"><app-handtracker (onPrediction)="prediction($event)"></app-handtracker></div>
 		<div class="col" style="color:antiquewhite">
 			<h5><strong>Gestures</strong></h5>
 			<p>
 				Hand Pointing: Change Search Category to Artist
 				<br>
-				Two Hands Pointing: Change Search Category to Album
+				Closed Hand: Change Search Category to Album
 				<br>
 				One Open Hand and One Hand Pointing: Change Search Category to Track
 				<br>
 				One Open Hand and One Closed Hand: Search
+				<br>
+				Two Hands Pointing: Select Artist/Album/Track (Move Forward)
+				<br>
+				Two Closed Hands: Select Artist/Album/Track (Move Back)
+				<br>
+				Open Hand: Open Selected Artist/Album/Track Page
+				<br>	
 			</p>
+			<div *ngIf="resources">
+				<strong>Selected Category:</strong> {{resources[0].category}}
+				<div *ngIf="resources[0].category == 'track'">
+					<strong>Selected Track:</strong> {{resources[k].name}}
+				</div>
+				<div *ngIf="resources[0].category == 'artist'">
+					<strong>Selected Artist:</strong> {{resources[i].name}}
+				</div>
+				<div *ngIf="resources[0].category == 'album'">
+					<strong>Selected Album:</strong> {{resources[j].name}}
+				</div>
+			</div>
 		</div>
 	</div>
 	<div [innerHTML]="gesture" style="color: antiquewhite;"></div>
@@ -31,7 +50,7 @@
 <!--TODO: Display a carousel component if searching for an artist or album. Bind carousel's resources and give it a static carouselId.-->
 <div *ngIf="resources">
 	<div *ngIf="resources[0].category != 'track'">
-		<app-carousel carouselId="searchCarousel" [resources]="resources" cardId="searchCard"></app-carousel>
+		<app-carousel carouselId="searchCarousel" [resources]="resources" cardId="searchCard" [gesture]="gesture"></app-carousel>
 	</div>
 	<!--TODO: Display a track-list component if searching for a track. Bind track-list's tracks.-->
 	<div *ngIf="resources[0].category == 'track'">
