--- a/client/src/app/pages/artist-page/artist-page.component.html
+++ b/client/src/app/pages/artist-page/artist-page.component.html
@@ -1,5 +1,5 @@
 
-<div class = "background">
+<html class = "background">
 	<div *ngIf="artist" class="row">
 		<div class="col-6">
 			<!--TODO: populate with artist name-->
@@ -42,6 +42,7 @@
 							<br>
 							One Open Hand and One Hand Pointing: Select Artist/Album/Track (Move Back)
 						</p>
+						<h5><strong>Selections</strong></h5>
 						<div *ngIf="toggle=='Track'">
 							<strong>Selected Category:</strong> Top Tracks
 							<br>
@@ -79,4 +80,4 @@
 		</div>
 
 	</div>
-</div>
+</html>
