--- a/client/src/app/pages/track-page/track-page.component.html
+++ b/client/src/app/pages/track-page/track-page.component.html
@@ -1,5 +1,5 @@
 
-<div class="background">
+<html class="background">
 	<div>
 		<br>
 		<div class="row">
@@ -51,4 +51,4 @@
 			<app-thermometer *ngFor="let audioFeature of audioFeatures" [audioFeature] = audioFeature.name [percentStr] = "audioFeature.percentageString" [color] = "audioFeature.color"></app-thermometer>
 		</div>
 	</div>
-</div>
+</html>
