--- a/client/src/app/pages/album-page/album-page.component.html
+++ b/client/src/app/pages/album-page/album-page.component.html
@@ -1,6 +1,6 @@
 
 
-<div class = "background">
+<html class = "background">
 	<div *ngIf="album" class="row">
 		<div class="col-6">
 			<!--TODO: populate with album name-->
@@ -49,4 +49,4 @@
 			</div>
 		</div>
 	</div>
-</div>
+</html>
