--- a/client/src/app/components/about/about.component.html
+++ b/client/src/app/components/about/about.component.html
@@ -1,7 +1,10 @@
 <div>
 	<br>
 	<div class="row">
-		<div class="col"><app-handtracker (onPrediction)="prediction($event)"></app-handtracker></div>
+		<div class="col">
+			<app-handtracker (onPrediction)="prediction($event)"></app-handtracker>
+			<div [innerHTML]="gesture" style="color: antiquewhite;"></div>
+		</div>
 		<div class="col" style="color:antiquewhite">
 			<h5><strong>Gestures</strong></h5>
 			<p>
@@ -11,7 +14,6 @@
 			</p>
 		</div>
 	</div>
-	<div [innerHTML]="gesture" style="color: antiquewhite;"></div>
 </div>
 
 <!--TODO: Define click callback to load about me information-->
