--- a/client/src/app/pages/album-page/album-page.component.html
+++ b/client/src/app/pages/album-page/album-page.component.html
@@ -24,7 +24,10 @@
 			<div>
 				<br>
 				<div class="row">
-					<div class="col-3"><app-handtracker (onPrediction)="prediction($event)"></app-handtracker></div>
+					<div class="col">
+						<app-handtracker (onPrediction)="prediction($event)"></app-handtracker>
+						<div [innerHTML]="gesture" style="color: antiquewhite;"></div>
+					</div>
 					<div class="col" style="color:antiquewhite">
 						<h5><strong>Gestures</strong></h5>
 						<p>
@@ -45,7 +48,6 @@
 						<strong>Selected Track:</strong> {{tracks[k].name}}
 					</div>
 				</div>
-				<div [innerHTML]="gesture" style="color: antiquewhite;"></div>
 			</div>
 		</div>
 	</div>
