--- a/client/src/app/pages/track-page/track-page.component.html
+++ b/client/src/app/pages/track-page/track-page.component.html
@@ -3,7 +3,10 @@
 	<div>
 		<br>
 		<div class="row">
-			<div class="col-3"><app-handtracker (onPrediction)="prediction($event)"></app-handtracker></div>
+			<div class="col-3">
+				<app-handtracker (onPrediction)="prediction($event)"></app-handtracker>
+				<div [innerHTML]="gesture" style="color: antiquewhite;"></div>
+			</div>
 			<div class="col" style="color:antiquewhite">
 				<h5><strong>Gestures</strong></h5>
 				<p>
@@ -20,7 +23,6 @@
 				<strong>Selected Artist:</strong> {{track.artists[i].name}}
 			</div>
 		</div>
-		<div [innerHTML]="gesture" style="color: antiquewhite;"></div>
 	</div>
 	<div class="row">
 		<div *ngIf="track" class="col-6">
