--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,14 +1,14 @@
-<nav class="navbar navbar-expand-lg sticky-top navbar-light bg-light">
+<nav class="navbar navbar-expand-lg sticky-top navbar-light bg-dark">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item navbar-brand">
-        <a class="navbar-brand" href="/">
+        <a id="browsing" class="navbar-brand navbar-text" href="/">
           Browsing spotify
         </a>
       </li>
     </ul>
     <ul class="navbar-nav navbar-right mr-auto">
       <li class="nav-item">
-        <a class="btn btn-dark" role="button" href="http://localhost:8888/login">Log in</a>
+        <a class="btn btn-light" role="button" href="http://localhost:8888/login">Log in</a>
       </li>
     </ul>
   </nav>
