--- a/client/src/app/components/handtracker/handtracker.component.css
+++ b/client/src/app/components/handtracker/handtracker.component.css
@@ -1,7 +1,9 @@
 
 .videobox{
-    border: 3px solid #0063FF;
-    border-color: #0063FF;
+    border: 3px solid black;
+    /* #0063FF; */
+    border-color: black;
+    /* #0063FF; */
     width: 200px;
     height: 200px;
 }
